[package]
name = "micro-react"
version = "0.1.0"
edition = "2021"
description = "MicroReact – a React-like UI runtime in Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen        = "0.2"
js-sys              = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  # Core DOM
  "Window", "Document", "Element", "HtmlElement", "Node", "NodeList",
  "Text", "Comment", "DocumentFragment", "ShadowRoot", "HtmlCollection",
  # Events
  "Event", "EventTarget", "MouseEvent", "KeyboardEvent", "InputEvent",
  "FocusEvent", "PointerEvent", "TouchEvent", "WheelEvent",
  "AnimationEvent", "TransitionEvent", "DragEvent", "ClipboardEvent",
  # Form elements
  "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement",
  "HtmlProgressElement", "HtmlTemplateElement",
  # Style / CSS
  "CssStyleDeclaration",
  # Parser
  "DomParser", "SupportedType",
  # Attr
  "Attr", "NamedNodeMap",
  # History / Location
  "Location", "History",
  # URL
  "Url", "UrlSearchParams",
  # Timers
  "Performance",
  # MutationObserver
  "MutationObserver", "MutationObserverInit", "MutationRecord",
  # Logging
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# "z" optimizes purely for smallest binary size, at a real cost to
# diffing/render performance. For a UI runtime whose whole job is fast
# reconciliation, that trade leans the wrong way — "s" still keeps
# size down (most size-inflating optimizations are still disabled)
# while allowing the compiler to make speed-motivated choices "z" forbids.
# If bundle size is the priority for your deployment, switch this back to
# "z"; if raw speed matters more than any size difference, try `3` and
# compare actual .wasm output size for your app before committing.
opt-level   = "s"
lto         = true
codegen-units = 1
