[package]
name = "micro-react"
version = "0.1.0"
edition = "2024"
description = "MicroReact – a React-like UI runtime in Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen        = "0.2"
js-sys              = "0.3"
console_error_panic_hook = "0.1"
thiserror           = "^2"

[dependencies.web-sys]
version = "0.3"
features = [
  # Core DOM
  "Window", "Document", "Element", "HtmlElement", "Node", "NodeList",
  "Text", "Comment", "DocumentFragment", "ShadowRoot", "HtmlCollection",
  # Events
  "Event", "EventTarget", "MouseEvent", "KeyboardEvent", "InputEvent",
  "FocusEvent", "PointerEvent", "TouchEvent", "WheelEvent",
  "AnimationEvent", "TransitionEvent", "DragEvent", "ClipboardEvent",
  # Form elements
  "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement",
  "HtmlProgressElement", "HtmlTemplateElement",
  # Style / CSS
  "CssStyleDeclaration",
  # Parser
  "DomParser", "SupportedType",
  # Attr
  "Attr", "NamedNodeMap",
  # History / Location
  "Location", "History",
  # URL
  "Url", "UrlSearchParams",
  # Timers
  "Performance",
  # MutationObserver
  "MutationObserver", "MutationObserverInit", "MutationRecord",
  # Logging
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# "z" is for size, "s" is mainly for size, but allows speed too
# "3" is mainly for speed but good for size too
opt-level   = "s"
lto         = true
codegen-units = 1
