[package]
name = "micro-react"
version = "0.1.0"
edition = "2024"
description = "MicroReact – a React-like UI runtime in Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen        = "0.2"
js-sys              = "0.3"
console_error_panic_hook = "0.1"
thiserror           = "^2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Attr", "AnimationEvent",
  "ClipboardEvent", "Comment", "CssStyleDeclaration",
  "Document", "DocumentFragment", "DomParser", "DragEvent",
  "Element", "Event", "EventTarget",
  "FocusEvent",
  "History", "HtmlCollection", "HtmlElement", "HtmlHeadElement",
  "HtmlInputElement", "HtmlLinkElement", "HtmlProgressElement",
  "HtmlSelectElement", "HtmlTemplateElement", "HtmlTextAreaElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MouseEvent", "MutationObserver", "MutationObserverInit", "MutationRecord",
  "NamedNodeMap", "Node", "NodeList",
  "Performance", "PointerEvent",
  "Response",
  "ShadowRoot", "SupportedType",
  "Text", "TouchEvent", "TransitionEvent",
  "Url", "UrlSearchParams",
  "WheelEvent", "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# "z" is for size, "s" is mainly for size, but allows speed too
# "3" is mainly for speed but good for size too
opt-level   = "s"
lto         = true
codegen-units = 1
# DO NOT set panic = "abort" here (or in [profile.dev]) without also
# rewriting the error-isolation code in scheduler.rs/hooks.rs.
# Effect cleanups and hook effect bodies are wrapped in
# std::panic::catch_unwind specifically to keep one broken effect/component
# from taking down the whole app. catch_unwind only works under the
# "unwind" panic strategy; switching to "abort" (a common wasm
# size-optimization) silently turns all of that isolation code into dead
# weight, and any panic in an effect will hard-abort the entire runtime
# instead of being contained. Pinned explicitly below so this can't
# regress silently.
panic = "unwind"
